@@ -48,6 +48,7 @@
 	* Added the implementation to make Javascript load at the end of a page
 	* Added class tx_solr_facet_Facet to handle facets
 	* Added implementation for tx_solr_facet_Facet->getSelectedOptions()
+	* Added implementation for facet requirements evaluation
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
